--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 
   <dependencies>
 	<dependency>
+	    <groupId>org.beryx</groupId>
+	    <artifactId>text-io</artifactId>
+	    <version>3.3.0</version>
+	    <scope>provided</scope>
+	</dependency>  
+	<dependency>
 	  <groupId>org.slf4j</groupId>
 	  <artifactId>slf4j-api</artifactId>
 	</dependency>
